--- a/assets/web.css
+++ b/assets/web.css
@@ -1,4 +1,103 @@
 * {
   margin: 0px;
   padding: 0px;
+  box-sizing: border-box;
+}
+nav {
+  font-family: Oswald, sans-serif;
+  font-size: 24px;
+}
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px;
+  background-color: rgb(25, 29, 32);
+  color: #fff;
+}
+ul {
+  display: inline;
+}
+li {
+  list-style: none;
+  display: inline;
+}
+body {
+  font-family: Roboto, sans-serif;
+  background-color: rgb(32, 37, 41);
+}
+.nav-links a {
+  color: #fff;
+}
+/* NAVBAR MENU */
+.menu {
+  display: flex;
+  gap: 1em;
+  font-size: 18px;
+}
+.menu li:hover {
+  background-color: #262929;
+  border-radius: 10px;
+  transition: 0.3s ease;
+}
+.menu li {
+  padding: 5px 14px;
+}
+.logo {
+  font-size: 24px;
+}
+.contain {
+  width: 100%;
+  height: 100vh;
+  background-color: rgb(25, 29, 32);
+  display: flex;
+  justify-content: center !important;
+  align-items: center !important;
+}
+.Sbutton {
+  top: 0;
+  left: 0;
+  margin-bottom: 20px;
+  width: 300px;
+  height: 100%;
+  background: linear-gradient(to right, #ffe602, #f84f4f) !important;
+  border-radius: 30px;
+  transition: 0.5s;
+}
+.slide-btn {
+  cursor: pointer;
+  padding: 10px 30px;
+  background: transparent;
+  outline: none;
+}
+.box {
+  width: 380px;
+  height: 450px;
+  background-color: whitesmoke;
+  font-size: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 30px;
+}
+
+.fbox {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.center {
+  display: flex;
+  justify-content: center !important;
+  align-items: center !important;
+  height: 750px;
+}
+img {
+  width: 300px;
+  border-radius: 15%;
+  padding-bottom: 10px;
+}
+label {
+  font-size: 16px;
+  text-align: center;
 }
